# Render

./: CMakeLists.txt  Func.cpp  Func.hpp  Laboratory№7.cpp  Main  Main.java  Matrix  README.md  Render.java  Triangle.java  Vector3.java
